# Patched dioxus-server for Cloudflare Workers WASM compatibility.
# Original: dioxus-server 0.7.3 by DioxusLabs.
# Changes: cfg-gated server-only deps and modules for wasm32 target.

[package]
edition = "2021"
name = "dioxus-server"
version = "0.7.3"
authors = ["Jonathan Kelley", "Evan Almloff"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Fullstack utilities for Dioxus (patched for CF Workers WASM)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"

[features]
axum-no-default = []
default = ["router", "document"]
default-tls = []
document = []
rkyv = ["dep:rkyv"]
router = ["dep:dioxus-router"]
rustls = ["dep:rustls", "dep:hyper-rustls"]
server = []

[lib]
name = "dioxus_server"
path = "src/lib.rs"

# ── Dependencies needed on ALL targets (including wasm32) ──────────────
[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["json", "form", "macros"] }
bytes = { version = "1.10.1", features = ["serde"] }
dioxus-fullstack-core = { version = "0.7.3", default-features = false, features = ["server"] }
http = "1.3.1"
inventory = "0.3"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"

# ── Dependencies only needed on native (non-WASM) targets ─────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = "0.4.39"
ciborium = "0.2.2"
dashmap = "6.1.0"
dioxus-cli-config = "0.7.3"
dioxus-core = "0.7.3"
dioxus-core-macro = "0.7.3"
dioxus-devtools = { version = "0.7.3", features = ["serve"] }
dioxus-document = { version = "0.7.3", default-features = false }
dioxus-history = { version = "0.7.3", default-features = false }
dioxus-hooks = "0.7.3"
dioxus-html = { version = "0.7.3", default-features = false }
dioxus-interpreter-js = "0.7.3"
dioxus-logger = "0.7.3"
dioxus-router = { version = "0.7.3", features = ["streaming"], optional = true }
dioxus-signals = "0.7.3"
dioxus-ssr = { version = "0.7.3", default-features = false }
enumset = "1.1.6"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = { version = "0.3", default-features = false }
generational-box = "0.7.3"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-rustls = { version = "0.27.7", optional = true, default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "logging", "ring"] }
hyper-util = { version = "0.1", features = ["full"] }
lru = "0.16.0"
multer = { version = "3.1.0", optional = true }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
pin-project = "1.1.10"
rkyv = { version = "0.8", optional = true, default-features = true }
rustc-hash = "2.1.1"
rustls = { version = "0.23.28", optional = true, default-features = false, features = ["logging", "std", "tls12", "ring"] }
serde_qs = "0.15.0"
subsecond = "0.7.3"
thiserror = "2.0.12"
tokio-tungstenite = "0.27.0"
tokio-util = { version = "0.7.15", features = ["rt"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower-layer = { version = "0.3.3", optional = true }
tracing-futures = "0.2.5"
url = "2"
walkdir = "2.5.0"

# Axum needs extra features on native for full server support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.axum]
version = "0.8.4"
default-features = false
features = ["multipart", "ws", "json", "form", "tokio", "http1", "http2", "macros"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.48"
features = ["rt", "sync", "rt-multi-thread", "macros", "net"]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.48"
features = ["rt", "sync", "macros"]
optional = true
